# sellershut-core

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT  LICENSE-MIT.md  README.md  build.rs
.github/: renovate.json
.github/workflows/: check.yaml  test.yaml
benches/: serde.rs
examples/: grpc_client.rs  grpc_server.rs  serde.rs
examples/grpc/: client.rs  server.rs
proto/: category.proto  listing.proto  user.proto
proto/common/: pagination.proto
src/: categories.rs  common.rs  google.rs  lib.rs  listings.rs  users.rs
src/account_provider/: mod.rs
src/category/: mod.rs
src/common/: mod.rs  pagination.rs
src/oauth/: mod.rs
src/oauth/account/: mod.rs
src/oauth/account_provider/: mod.rs
src/oauth/session/: mod.rs
src/proto/: account.proto  account_provider.proto  category.proto  common.proto  session.proto  user.proto
src/session/: mod.rs
src/tables/: mod.rs
src/tests/: mod.rs
src/tests/encode/: mod.rs
src/tests/encode/categories/: mod.rs  surreal.rs
src/tests/encode/users/: mod.rs  surreal.rs
src/user/: mod.rs
src/utils/: mod.rs
src/utils/ser_de/: account.rs  category.rs  mod.rs  user.rs
