[package]
name = "sellershut-core"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.12.4", optional = true }
prost-types = { version = "0.12.4", optional = true }
serde = { version = "1.0.200", optional = true }
sqlx = { version = "0.7.4", default-features = false, optional = true }
tonic = { version = "0.11.0", optional = true, default-features = false }

[build-dependencies]
tonic-build = "0.11.0"

[features]
default = []
categories = ["tonic"]
users = ["tonic"]
tonic = ["dep:tonic", "tonic/codegen", "tonic/prost", "prost"]
tonic-rpc = ["tonic", "tonic/transport"]
serde = ["dep:serde", "serde/derive"]
sqlx = ["dep:sqlx"]

[dev-dependencies]
criterion = "0.5.1"
fake = { version = "2.9.2", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs"
]

[[example]]
name = "grpc-server"
path = "examples/grpc/server.rs"
required-features = ["categories", "tonic-rpc"]

[[example]]
name = "grpc-client"
path = "examples/grpc/client.rs"
required-features = ["categories", "tonic-rpc"]

[[bench]]
name = "serde"
harness = false
path = "benches/serde.rs"
required-features = ["categories", "serde"]
