[package]
name = "sellershut-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.13.4"
serde = { version = "1.0.217", optional = true }
time = { version = "0.3.37", optional = true }
tonic = "0.12.3"
tonic-types = "0.12.3"

[features]
default = []
users = []
rpc-client-users = ["users"]
rpc-server-users = ["users"]
serde = ["serde/derive"]
time = ["dep:time"]

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
