[package]
name = "sellershut-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { version = "0.22.1", optional = true }
prost = "0.13.4"
rust_decimal = { version = "1.36.0", optional = true }
serde = { version = "1.0.217", optional = true }
time = { version = "0.3.37", optional = true }
tonic = "0.12.3"
tonic-types = "0.12.3"

[features]
default = []
categories = ["dep:base64"]
users = []
listings = []
rpc-client-categories = ["categories"]
rpc-server-categories = ["categories"]
rpc-client-users = ["users"]
rpc-server-users = ["users"]
rpc-client-listings = ["listings"]
rpc-server-listings = ["listings"]
serde = ["serde/derive"]
time = ["dep:time"]
rust_decimal = ["dep:rust_decimal"]

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["cleanup-markdown"] }

[dev-dependencies]
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "grpc-client"
path = "examples/grpc_client.rs"
required-features = ["rpc-client-users"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["users", "serde"]

[[example]]
name = "grpc-server"
path = "examples/grpc_server.rs"
required-features = ["rpc-server-users"]
